bus: gst_bus_add_watch() can return 0 on error

Fixes: https://bugzilla.gnome.org/show_bug.cgi?id=735195